--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,15 @@
     "**/.vscode/**"
   ],
   "files.associations": {
-    "ostream": "cpp"
+    "ostream": "cpp",
+    "array": "cpp",
+    "deque": "cpp",
+    "forward_list": "cpp",
+    "list": "cpp",
+    "string": "cpp",
+    "unordered_map": "cpp",
+    "vector": "cpp",
+    "string_view": "cpp",
+    "initializer_list": "cpp"
   }
 }
